[4-27-19] Add new env configs

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   "extends": ["airbnb", "prettier"],
+  "env": {
+    "node": true,
+    "es6": true,
+    "browser": true
+  },
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error"
