[4-27-19] Update rules for prop-types

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "import/extensions": ["js", "jsx"],
     "prettier/prettier": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/prop-types": [1]
   }
 }
