--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "jsdoc": "^3.5.5",
     "prettier": "^1.17.0",
     "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.30.0",
