--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./webpack/webpack.config.dev.js",
-    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js"
+    "flow": "flow",
+    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,12 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
+    "babel-preset-flow": "^6.23.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
@@ -32,10 +39,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "flow-bin": "^0.98.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
     "jsdoc": "^3.5.5",
     "prettier": "^1.17.0",
     "redux-devtools-extension": "^2.13.8",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
@@ -44,6 +54,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
